@@ -7,7 +7,7 @@
   <property name="description" i18n:translate=""></property>
   <property name="content_icon">mail_icon.gif</property>
   <property name="allow_discussion">False</property>
-  <property name="global_allow">True</property>
+  <property name="global_allow">False</property>
   <property name="filter_content_types">False</property>
   <property name="allowed_content_types">
   </property>
